5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1582_1331.log
== SUBMITION (2019-03-14 12:50:19) 
-- CODE:
Print(16)
print(2)
-- EXECUTION TIME:
0.142911
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    Print(16)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:50:20) 
-- CODE:
Print(16)
print(2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print(16)
NameError: name 'Print' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:50:56) 
-- CODE:
Print(16)
print(2)
-- EXECUTION TIME:
0.14845
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    Print(16)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:51:03) 
-- CODE:
print(16)
print(2)
-- EXECUTION TIME:
0.110603
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:58:37) 
-- CODE:
var= input('aa')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print(16)
NameError: name 'Print' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:58:56) 
-- CODE:
var= input("lolo")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print(16)
NameError: name 'Print' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:59:16) 
-- CODE:
var= input("lolo")
print(var)
-- OUTPUT:
xx
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:02:44) 
-- CODE:
var= input("lolo")
print(var)
-- OUTPUT:
xx
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:11:01) 
-- CODE:
var = 50//3
var1 = 50%3
print(var)
print(var1)

-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:11:13) 
-- CODE:
var = 50//3
var1 = 50%3
print(var)
print(var1)

-- EXECUTION TIME:
0.215484
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
